# grafika_project1

./: Cargo.toml  README.md  README.txt
src/: app.rs  camera.rs  lib.rs  main.rs  shader.wgsl  state.rs  vertices.rs
