[package]
name = "grafika_project1"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25"
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.11.10"
log = "0.4"
wgpu = "29.0.1"
pollster = "0.4.0"
rand = "0.10.1"
bytemuck = {version = "1.25.0", features = ["derive"]}
glam = "0.32.1"
